--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,7 +14,8 @@
     "noEmit": false,
     "declaration": true,
     "outDir": "lib",
-    "jsx": "react-native"
+    "jsx": "react-native",
+    "types": []
   },
   "include": ["src/**/*"],
   "exclude": ["node_modules", "lib", "**/*.test.ts", "**/*.test.tsx"]
