--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "prepublishOnly": "npm run build",
     "test": "jest",
     "lint": "eslint src --ext .ts,.tsx",
-    "clean": "rm -rf lib"
+    "clean": "rimraf lib"
   },
   "keywords": [
     "react-native",
@@ -49,6 +49,7 @@
     "@typescript-eslint/parser": "^6.0.0",
     "eslint": "^8.0.0",
     "jest": "^29.0.0",
+    "rimraf": "^6.0.1",
     "typescript": "^5.0.0"
   },
   "engines": {
